# NullTrace

./: .coverage  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.superpowers/brainstorm/606-1779179101/content/: architecture.html  final-summary.html  proxy-sources.html  reliability.html  tor-integration.html  waiting.html
.superpowers/brainstorm/606-1779179101/state/: server-stopped
docs/superpowers/plans/: 2026-05-19-proxy-vault-plan.md
docs/superpowers/specs/: 2026-05-19-proxy-vault-design.md
src/proxy_vault/: __init__.py  config.py  main.py  models.py
src/proxy_vault/cli/: commands.py
src/proxy_vault/core/: __init__.py  health_monitor.py  ip_rotator.py  proxy_manager.py  relay_chain.py
src/proxy_vault/providers/: __init__.py  base.py  custom_proxy.py  free_pool.py  paid_adapter.py  tor_relay.py
src/proxy_vault/providers/collectors/: __init__.py  api_collectors.py  github_collectors.py  http_collectors.py  socks_collectors.py
src/proxy_vault/server/: __init__.py  http_proxy.py  socks5_proxy.py
src/proxy_vault/webui/: api.py  app.py
src/proxy_vault/webui/templates/: config.html  controls.html  dashboard.html  index.html
tests/: conftest.py  test_config.py
tests/core/: test_health_monitor.py  test_ip_rotator.py  test_proxy_manager.py  test_relay_chain.py
tests/providers/: test_base.py  test_custom_proxy.py  test_free_pool.py  test_paid_adapter.py  test_tor_relay.py
tests/providers/collectors/: test_http_collectors.py
