[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy-vault"
version = "0.1.0"
description = "IP-hiding proxy tool for security pentesting"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "click>=8.1",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "python-socks[asyncio]>=2.4",
    "pyyaml>=6.0",
    "httpx>=0.26",
    "jinja2>=3.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
proxy = "proxy_vault.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]
